View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025906 | Open CASCADE | OCCT:Visualization | public | 2015-03-06 18:51 | 2015-05-14 15:31 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2013 | ||
Product Version | 6.3.1 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025906: Visualization, V3d_View::Rotation() - eliminate erroneous viewer redraw within disabled immediate update | ||||
Description | Rotation method of V3d_View class has the superfluous view update due to incorrect condition | ||||
Steps To Reproduce | not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25906 has been created by ibs. SHA-1: 951ecc422d5189b67db76325770aa0e363bc680e Detailed log of new commits: Author: ibs Date: Fri Mar 6 18:52:30 2015 +0300 0025906: The condition of immediate update is incorrect in the method of the view rotation incorrect condition fixed |
|
dear kgv, please review CR25906 branch in OCCT git |
|
Branch CR25906 has been updated by ibs. SHA-1: b22197324c7294da5fa76f161ff3e1805a414813 Detailed log of new commits: Author: ibs Date: Tue Mar 10 10:35:43 2015 +0300 redundant update removed (Rotate method already does update) |
|
Branch CR25906 has been updated forcibly by ibs. SHA-1: 97c8b3aef705db25b2f10eb0f23d5c0dd7c8a041 |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25906 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 97c8b3aef705db25b2f10eb0f23d5c0dd7c8a041 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: http://occt-tests/CR25906-master-occt-64/Windows-64-VC10/summary.html bugs modalg_1(006) bug19793_2 bugs mesh(016) bug25464 Both test-cases are unstable. Testing on Linux: Total MEMORY difference: 91671784 / 92036000 Total CPU difference: 57574.29000000006 / 58057.23999999997 Testing on Windows: Total MEMORY difference: 57952346 / 57952469 Total CPU difference: 56798.984375 / 31110.625 |
|
Branch CR25906 has been deleted by inv. SHA-1: 97c8b3aef705db25b2f10eb0f23d5c0dd7c8a041 |
occt: master b12a3e54 2015-03-06 15:52:30
Committer: bugmaster Details Diff |
0025906: Visualization, V3d_View::Rotation() - eliminate erroneous viewer redraw within disabled immediate update the superfluous view update of Rotation method removed because of used before Rotate method already does immediate update |
Affected Issues 0025906 |
|
mod - src/V3d/V3d_View.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-06 18:51 |
|
New Issue | |
2015-03-06 18:51 |
|
Assigned To | => ibs |
2015-03-06 18:54 | git | Note Added: 0038203 | |
2015-03-06 18:54 |
|
Note Added: 0038205 | |
2015-03-06 18:54 |
|
Assigned To | ibs => kgv |
2015-03-06 18:54 |
|
Status | new => resolved |
2015-03-06 18:54 |
|
Steps to Reproduce Updated | |
2015-03-06 21:41 | kgv | Summary | The condition of immediate update is incorrect in the method of the view rotation => Visualization, V3d_View::Rotation() - eliminate erroneous viewer redraw within disabled immediate update |
2015-03-10 10:37 | git | Note Added: 0038219 | |
2015-03-10 11:36 | git | Note Added: 0038221 | |
2015-03-10 12:00 | kgv | Note Added: 0038222 | |
2015-03-10 12:00 | kgv | Assigned To | kgv => bugmaster |
2015-03-10 12:00 | kgv | Status | resolved => reviewed |
2015-03-10 12:01 | kgv | Product Version | 6.8.0 => 6.3.1 |
2015-03-10 18:25 |
|
Assigned To | bugmaster => apv |
2015-03-12 12:37 |
|
Note Added: 0038291 | |
2015-03-12 12:37 |
|
Assigned To | apv => bugmaster |
2015-03-12 12:37 |
|
Status | reviewed => tested |
2015-03-12 12:37 |
|
Test case number | => Not needed |
2015-03-13 16:52 | bugmaster | Changeset attached | => occt master b12a3e54 |
2015-03-13 16:52 | bugmaster | Status | tested => verified |
2015-03-13 16:52 | bugmaster | Resolution | open => fixed |
2015-03-18 13:39 | git | Note Added: 0038628 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |