0025906: Visualization, V3d_View::Rotation() - eliminate erroneous viewer redraw within disabled immediate update

the superfluous view update of Rotation method removed because of used before Rotate method already does immediate update